<resources>
    <string name="app_name">album</string>
    <string name="toolbar_send">发送</string>
    <string name="pictures_videos">图片和视频</string>
    <string name="preview_edit">编辑</string>
    <string name="ogrigin_picture">原图</string>
    <string name="preview">预览</string>
    <string name="preview_check">选择</string>
    <string name="edit_tv_cancel">取消</string>
    <string name="edit_tv_finish">完成</string>

</resources>
